[gd_scene load_steps=9 format=3 uid="uid://gmgo7r2wlrsa"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_e3cyq"]
[ext_resource type="PackedScene" uid="uid://bgtokr7qmydy2" path="res://Scenes/cat.tscn" id="1_ovk3c"]
[ext_resource type="Texture2D" uid="uid://dobmuc5l6wxy3" path="res://Assets/Placeholder/skyscraper.png" id="2_vnm3r"]
[ext_resource type="PackedScene" uid="uid://mycwh58lhply" path="res://Scenes/conductor.tscn" id="3_w8xvc"]
[ext_resource type="PackedScene" uid="uid://cg7noqaqme0mf" path="res://Scenes/spawner.tscn" id="5_kre34"]
[ext_resource type="Script" path="res://Scripts/HUD.gd" id="6_inbif"]
[ext_resource type="Texture2D" uid="uid://cq8adw03ye573" path="res://Assets/kittyPaw2.png" id="7_iv4ol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s2vra"]
bg_color = Color(0, 0, 0, 0.235294)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource("1_e3cyq")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="SkyscraperLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2(0, 1584)

[node name="Skyscraper" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/SkyscraperLayer"]
position = Vector2(-400, 0)
scale = Vector2(2, 2)
texture = ExtResource("2_vnm3r")
centered = false

[node name="Cat" parent="." instance=ExtResource("1_ovk3c")]

[node name="Spawners" type="Node2D" parent="Cat"]
position = Vector2(1, -100)

[node name="Spawner1" parent="Cat/Spawners" instance=ExtResource("5_kre34")]
position = Vector2(-313, -405)

[node name="Spawner2" parent="Cat/Spawners" instance=ExtResource("5_kre34")]
position = Vector2(-153, -407)

[node name="Spawner3" parent="Cat/Spawners" instance=ExtResource("5_kre34")]
position = Vector2(-3, -407)

[node name="Spawner4" parent="Cat/Spawners" instance=ExtResource("5_kre34")]
position = Vector2(151, -411)

[node name="Spawner5" parent="Cat/Spawners" instance=ExtResource("5_kre34")]
position = Vector2(292, -410)

[node name="Conductor" parent="." instance=ExtResource("3_w8xvc")]
autoplay = false

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6_inbif")

[node name="Panel" type="Panel" parent="HUD"]
offset_left = 889.0
offset_top = 15.0
offset_right = 1088.0
offset_bottom = 86.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s2vra")

[node name="PawPrint" type="TextureRect" parent="HUD"]
offset_left = 916.0
offset_top = 25.0
offset_right = 4616.0
offset_bottom = 1250.0
scale = Vector2(0.04, 0.04)
texture = ExtResource("7_iv4ol")
expand_mode = 1
stretch_mode = 1

[connection signal="beat" from="Conductor" to="." method="_on_conductor_beat"]
